# abcdef

./: .gitignore  README.md  pyproject.toml
docs/bakeoff/: candidates.md
docs/roadmap/: README.md  hardware-sku-checklist.md  hardware-team-server.md  phase-0-bakeoff.md  phase-1-serving.md  phase-2-knowledge.md  phase-3-gpu-team.md  training-plan.md
docs/superpowers/specs/: 2026-06-12-use-cases-design.md
evals/: README.md  __init__.py  cases.py  metrics.py  passes.py  report.py  runner.py  score.py
evals/cases/code/: uart-init-01.yaml
evals/cases/grounded-qa/: register-lookup-01.yaml
evals/cases/tr-docs/: formal-letter-01.yaml
evals/rubrics/: code.md  grounded-qa.md  tr-docs.md
evals/tests/: test_cases.py  test_metrics.py  test_passes.py  test_report.py  test_runner.py
